<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thermal_zone_publisher</name>
  <version>0.0.0</version>
  <description>ROS2 node that will create publishers for thermal zones found on linux systems</description>
  <maintainer email="nat11public@gmail.com">Nathanael Gandhi</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
